# SoftwareDevelopmentTechnologiesTasks

./: .gitignore  README.md
Task2/: send.sh
Task3/: Task3  makefile
Task4/: CMakeLists.txt
Task4/include/Task4/: check_temperature.h  do_alarm.h
Task4/src/: Task4.c  check_temperature.c  do_alarm.c
Task4/test/: CMakeLists.txt  check_temperature.cpp
